fix(ui): keep Music queue filtering compatible with API 29